    be replaced with a call the setPath () method on the CIMObject, passing the
    same CIMObjectPath.  A call to the CIMObjectWithPath getObject () method 
    should be replaced with the CIMObject, and a call to the CIMObjectWithPath 
    getReference () method should be replaced with a call to the CIMObject 
    getPath () method.

55. (Jenny Yu - HP) 31 May 2002 - Implemented a cimserver_kill() method 
    to kill the CIMServer process if the CIM Server is still running after
    the shutdown timeout has expired during shutdown.  The CIMServer process
    Id is saved in a file after CIMServer starts up.  This file is removed
    after CIMServer terminates normally.  Only added code for the HPUX
    platform.  
========================================================================

Version 1.08 working towards 1.1 - Started 27 March 2002
TAG: Version_1_08. Note that the tagging was not all simultaneous because
of problems with the CVS repository

1. KS 27 March 2002 - Updaded pegasus version to 1.08. Took snapshot.
   Tagged CVS 1_08.
   
2. KS 2 April 2002 -Add better qualifier testfunctions to cimclass, 
   qualifierlist, etc. and start to add specific qualifier tests on creates.
========================================================================

Version 1.07 working towards 1.1 - Started 4 Feb 2002
Started just before cutover to the new dispatcher, etc.
TAG: VERSION_1_07

1. KS - Updated pegsusversion to 1.07  and tagged file.

2. (Markus Mueller) 05 Feb 2002 - AIX support.

3. (Sushma Fernandes - HP) 13 Feb 2002 Implemented FileSystemPropertyOwner
    class to support PEGASUS_HOME dependent properties like Repository
    location, Provider location and Consumer location.
    The default location for these properties continue to be the same
    as before. Added support to the Config Manager to own the
    Pegasus Home variable and implemented method (getHomedPath) to
    return absolute paths based from Pegasus Home.
