@@ -28,7 +28,7 @@ include pegasus/mak/config.mak
 # get on with testing. I know of no CLI to stop a window started with start so that
 # field is blank.  ks 7 April 2002
 ifeq ($(PEGASUS_PLATFORM),WIN32_IX86_MSVC)
-  CIMSERVER_START_SERVICE = start cimserver -l
+  CIMSERVER_START_SERVICE = start cimserver
   CIMSERVER_STOP_SERVICE =
   SLEEP =
   REMOVE_PEGASUS_DIRECTORY = mu rmdirhier pegasus
@@ -39,8 +39,8 @@ ifeq ($(PEGASUS_PLATFORM),WIN32_IX86_MSVC)
 endif
 
 ifeq ($(PEGASUS_PLATFORM),HPUX_PARISC_ACC)
-  CIMSERVER_START_SERVICE = cimserver -d
-  CIMSERVER_STOP_SERVICE = /usr/bin/ps -ef | /usr/bin/grep cimserver | /usr/bin/grep -v grep | /usr/bin/awk '{print "kill -9 "$$2 |"/usr/bin/sh"}'
+  CIMSERVER_START_SERVICE = cimserver
+  CIMSERVER_STOP_SERVICE = cimserver -s
   SLEEP = sleep 5
   REMOVE_PEGASUS_DIRECTORY = rm -Rf pegasus.old; mv pegasus pegasus.old
   MUEXE = mu
@@ -50,7 +50,7 @@ ifeq ($(PEGASUS_PLATFORM),HPUX_PARISC_ACC)
 endif
 
 ifeq ($(PEGASUS_PLATFORM),LINUX_IX86_GNU)
-  CIMSERVER_START_SERVICE = cimserver -d
+  CIMSERVER_START_SERVICE = cimserver
   CIMSERVER_STOP_SERVICE = /bin/ps -ef | /bin/grep cimserver | /bin/grep -v grep | /usr/bin/awk '{print "kill -9 "$$2 |"/bin/bash"}'
   SLEEP = sleep 5
   REMOVE_PEGASUS_DIRECTORY = rm -Rf pegasus.old; mv pegasus pegasus.old
@@ -61,7 +61,7 @@ ifeq ($(PEGASUS_PLATFORM),LINUX_IX86_GNU)
 endif
 
 ifeq ($(PEGASUS_PLATFORM),LINUX_IA64_GNU)
-  CIMSERVER_START_SERVICE = cimserver -d
+  CIMSERVER_START_SERVICE = cimserver
   CIMSERVER_STOP_SERVICE = /bin/ps -ef | /bin/grep cimserver | /bin/grep -v grep | /usr/bin/awk '{print "kill -9 "$$2 |"/bin/bash"}'
   SLEEP = sleep 5
   REMOVE_PEGASUS_DIRECTORY = rm -Rf pegasus.old; mv pegasus pegasus.old
